Fix overflow elements in column groups

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -165,6 +165,10 @@
 
             &.o_kanban_card_group_column {
                 flex-direction: column;
+
+                > * {
+                    max-width: 100%;
+                }
             }
         }
 
